--- a/sensor-firmware/package.yml
+++ b/sensor-firmware/package.yml
@@ -19,6 +19,7 @@ target.arm:
   - src/debug.c
   - src/board.c
   - src/vl6180x/vl6180x_chibios.c
+  - src/TCS3472.c
   - src/stubs.cpp
   - src/uavcan/node.cpp
   - src/uavcan/DistanceVL6180X_pub.cpp
